yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec:
  tls:
  - hosts:
      - a552d0b44af114b6bacaa0804468b8bc-1221253337.eu-central-1.elb.amazonaws.com
    secretName: ravivportfolio-tls
  rules:
  - host: a552d0b44af114b6bacaa0804468b8bc-1221253337.eu-central-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
